--- a/Chatroom/pom.xml
+++ b/Chatroom/pom.xml
@@ -148,6 +148,7 @@
         </dependency>
         
 	</dependencies>
+
 	<build>
 		<finalName>WebSocket</finalName>
 		<plugins>
@@ -156,9 +157,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.2</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<optimize>true</optimize>
+<!--                    The -source argument for the Java compiler.-->
+					<source>11</source>
+<!--                    The -target argument for the Java compiler.-->
+					<target>11</target>
 				</configuration>
 			</plugin>
 		</plugins>
